# SimpleEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Engine.cpp  Environment.h  GMath.cpp  GMath.h  Pos.h  defineTypes.h  imgui.ini  precompile.h  precompile.h.in  program.cpp  readme.md
Projects/: AlphaSence.cpp  AlphaSence.h  Demo.cpp  GameMap.cpp  GameMap.h  Player.cpp  Player.h  config.txt
Resource/: readme.md
Resource/Table/: config.txt
Resource/tables/: action.tsv  addon.wdf.ini  atom.wdf.ini  avatar.tsv  firework.wdf.ini  goods.wdf.ini  item.wdf.ini  magic.tsv  magic.wdf.ini  map.tsv  map.txt  mapani.wdf.ini  misc.wdf.ini  role.tsv  role_was.tsv  school.tsv  shape.tsv  shape.wd2.ini  shape.wd3.ini  shape.wd4.ini  shape.wd5.ini  shape.wd6.ini  shape.wd7.ini  shape.wdf.ini  smap.wdf.ini  waddon.wdf.ini  weapon.tsv  wzife.wdf.ini
Shader/: LineShader.fg  LineShader.vs  sprite.fs
bash/: BashEnv.sh  SRC_CMakeLists_Template.txt  a.txt  find.sh  gen_src_cmakelists.sh  readme.md  test.bak  test.txt  test2.txt
debugger/: CMakeLists.txt
debugger/scripts/: main.lua
debugger/src/: CMakeLists.txt  DebugServer.cpp  DebugServer.h  Debugger.cpp  Debugger.h  DebuggerCore.cpp  DebuggerCore.h  defines.h  defines.h.in  main.cpp  test_asio.cpp
luadist/: hello.lua
scripts/: Test3.lua
scripts/client/: main.lua
scripts/server/: main.lua
server/: CMakeLists.txt  defines.h  main.cpp
server/bash/: SRC_CMakeLists_Template.txt  gen_src_cmakelists.sh
server/scripts/: main.lua
server/src/: CMakeLists.txt  DebugProtocol.cpp  DebugProtocol.h  DebugServer.cpp  DebugServer.h  DebuggerCore.cpp  DebuggerCore.h  defines.h  defines.h.in  main.cpp  test_asio.cpp
src/: Bitmap.cpp  Bitmap.h  CMakeLists.txt  CubeBatch.cpp  CubeBatch.h  Engine.cpp  Engine.h  Entity.h  Environment.h  FrameAnimation.cpp  FrameAnimation.h  GMath.h  Game.cpp  Game.h  IUpdateDraw.h  InputManager.cpp  InputManager.h  Logger.h  LuaVM.cpp  LuaVM.h  Message.cpp  Message.h  Pos.h  Random.cpp  Random.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h  SimpleEngine  SpriteBatch.cpp  SpriteBatch.h  SpriteRenderer.cpp  SpriteRenderer.h  State.h  TextRenderer.cpp  TextRenderer.h  TextureManager.cpp  (+12 more)
src/Astar/include/: InputHandler.h  SquareGraph.h
src/Components/: BaseComponent.cpp  BaseComponent.h
src/Event/: Event.h
src/Network/: Client.cpp  Client.h  Message.cpp  Message.h
src/Objects/: MapObject.cpp  Object.cpp  Object.h  Object.inl
src/Projects/: AlphaSence.cpp  AlphaSence.h  Combat.cpp  Combat.h  Demo.cpp  Demo.h  GameMap.cpp  GameMap.h  Player.cpp  Player.h  TestLua.cpp  TestSence.h  animation_database.h
src/Time/: Time.cpp  Time.h  Timer.cpp  Timer.h  TimerManager.cpp  TimerManager.h
src/actor/: Actor.h  ActorManager.h  Player.cpp  Player.h  PlayerState.cpp  PlayerState.h
src/animation/: FrameAnimation.cpp  FrameAnimation.h  animation_database.h
src/combat/: Combat.cpp  Combat.h  Skill.cpp  Skill.h
src/core/: Graphics2D.cpp  Graphics2D.h  Object2D.cpp  Object2D.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h
src/scene/: BaseScene.cpp  BaseScene.h  Demo.cpp  Demo.h  GameMap.cpp  GameMap.h  GameScene.cpp  GameScene.h  Player.cpp  Player.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SplashScene.cpp  SplashScene.h  TestSence.h  UIScene.cpp  UIScene.h  WASViewerScene.cpp  WASViewerScene.h
test_client/: CMakeLists.txt
test_client/src/: CMakeLists.txt  defines.h  main.cpp  test_asio.cpp  test_asio.h
tools/VScodeDebugger/luadebugger/: CHANGELOG.md  README.md  debugger_protocol.txt  luadebug.lua  main.lua  package.json  server
tools/VScodeDebugger/luadebugger/src/: extension.ts
